--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,7 @@
     "ionic": "driftyco/ionic-bower#1.0.0"
   },
   "dependencies": {
-    "parse": "~1.4.2"
+    "parse": "~1.4.2",
+    "openfb": "~0.5.0"
   }
 }
