--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "cordova-plugin-whitelist",
     "cordova-plugin-splashscreen",
     "com.ionic.keyboard",
-    "org.apache.cordova.inappbrowser"
+    "org.apache.cordova.inappbrowser",
+    "cordova-plugin-file",
+    "cordova-plugin-media"
   ],
   "cordovaPlatforms": [
     "android",
